# OispaHallaAnticheat

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Dockerfile  HAC_history.txt  LICENSE  README.md  README.tpl  TODO.md  fly.toml  gameState.txt  rebuild_docs.sh  tmp.txt
.github/workflows/: rust-artifact-windows.yml  rust-artifact.yml  rust.yml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/OispaHallaAnticheat/: all.html  constant.DEBUG_INFO.html  constant.NAME.html  constant.NAME_SERVER.html  constant.VERSION.html  fn.game.html  fn.give_help.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
docs/OispaHallaAnticheat/server/: enum.ApiTags.html  fn.alive.html  fn.config.html  fn.hello.html  fn.rocket_route_fn_alive.html  fn.rocket_route_fn_config.html  fn.rocket_route_fn_hello.html  fn.start_server.html  index.html  sidebar-items.js  static.ALLOWED_ORIGINS_STR.html  static.static_rocket_route_info_for_alive.html  static.static_rocket_route_info_for_config.html  static.static_rocket_route_info_for_hello.html  struct.Api.html  struct.ConfigResponse.html  struct.RequestCount.html  struct.ValidationResponse.html
docs/OispaHallaAnticheat/server/input_types/: index.html  sidebar-items.js  struct.ValidationInput.html
docs/OispaHallaAnticheat/server/keys/: constant.FALLBACK_CERT.html  constant.FALLBACK_KEY.html  fn.get_cert.html  fn.get_key.html  index.html  sidebar-items.js
docs/OispaHallaAnticheat/server/response_types/: enum.AliveResponse.html  enum.GetConfigResponse.html  enum.StatsResponse.html  enum.ValidationResponse.html  index.html  sidebar-items.js  struct.ServerConfig.html  struct.Stats.html  struct.ValidationData.html
docs/implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/poem/web/: trait.IntoResponse.js
docs/implementors/poem_openapi/base/: trait.ApiResponse.js  trait.OpenApi.js  trait.Tags.js
docs/implementors/poem_openapi/types/: trait.ParseFromJSON.js  trait.ToJSON.js  trait.Type.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/src/OispaHallaAnticheat/: main.rs.html  server.rs.html
docs/src/OispaHallaAnticheat/server/: input_types.rs.html  keys.rs.html  response_types.rs.html
src/: board.rs  bot.rs  direction.rs  main.rs  recording.rs  server.rs  server.rs.bak  validator.rs
src/board/: tile.rs
src/server/: input_types.rs  keys.rs  response_types.rs
