[package]
name = "OispaHallaAnticheat"
version = "0.10.0"
authors = ["Elias Eskelinen <elias.eskelinen@pm.me>"]
edition = "2021"
license = "MIT"
build = "build.rs"

[[bin]]
name = "OispaHallaAnticheat"
path = "src/main.rs"

[build-dependencies]
built = { version = "0.5", features = ["git2"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cargo-readme = "*"

[dependencies]
twothousand-forty-eight = { version = "0.21.1" }
# Argument parsing
clap = { version = "3.1", features = ["derive"] }
# Server
poem = { version = "1.3", features = ["rustls"], optional = true }
poem-openapi = { version = "3.0", features = ["swagger-ui"], optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
], optional = true }
futures-util = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# Game
read_input = { version = "0.8.6", optional = true }

[features]
default = ["server"]
server = [
    "poem",
    "poem-openapi",
    "serde",
    "serde_json",
    "tokio",
    "futures-util",
    "tracing-subscriber",
]
game = ["read_input"]

[profile.optimized]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
